--- a/src/main/resources/templates/orderForm.html
+++ b/src/main/resources/templates/orderForm.html
@@ -6,42 +6,44 @@
 </head>
 
 <body>
+
 <form method="POST" th:action="@{/orders}" th:object="${order}">
     <h1>Закажите свою шаверму!</h1>
 
-    <img th:src="@{/images/ShawarmaCloud.png}" alt="ShawarmaCloud" style="width:400px;height:400px">
+    <img th:src="@{/images/ShawarmaCloud.png}" alt="ShawarmaCloud" style="width:200px;height:200px">
 
     <h3>Ваши шавермы в заказе:</h3>
-    <a th:href="@{/design}" id="another">Собрать другую шаверму</a><br>
+    <a th:href="@{/design}" id="another">Собрать еще шаверму</a><br>
     <ul>
-        <li th:each="шаверма : ${order.shawarmas}">
+        <li th:each="shawarma : ${order.shawarmas}">
             <span th:text="${shawarma.name}">название шавермы</span></li>
     </ul>
 
     <h3>Детали доставки...</h3>
-    <label for="deliveryName">имя: </label>
-    <input type="text" th:field="${deliveryName}">
+    <label for="deliveryName">Имя: </label>
+    <input type="text" th:field="${order.deliveryName}">
     <br>
 
-    <label for="deliveryStreet">улица: </label>
-    <input type="text" th:field="${deliveryStreet}">
+    <label for="deliveryStreet">Улица: </label>
+    <input type="text" th:field="${order.deliveryStreet}">
     <br>
 
-    <label for="deliveryCity">город: </label>
-    <input type="text" th:field="${deliveryCity}">
+    <label for="deliveryCity">Город: </label>
+    <input type="text" th:field="${order.deliveryCity}">
     <br>
 
     <h3>Оплата...</h3>
-    <label for="ccNumber">номер карты #: </label>
-    <input type="text" th:field="${ccNumber}">
+    <label for="ccNumber">Номер карты: </label>
+    <input type="text" th:field="${order.ccNumber}">
     <br>
 
-    <label for="ccExpiration">срок действия: </label>
-    <input type="text" th:field="${ccExpiration}">
+    <label for="ccExpiration">Срок действия: </label>
+    <input type="text" th:field="${order.ccExpiration}">
     <br>
 
     <label for="ccCVV">CVV: </label>
-    <input type="text" th:field="${ccCVV}">
+    <input type="text" th:field="${order.ccCVV}">
+    <br>
     <br>
 
     <input type="submit" value="Подтвердить заказ">
